<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_user"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_margin="16dp"
    android:clickable="true"
    android:focusable="true"

    android:minWidth="400dp"
    android:maxWidth="800dp"
    app:cardBackgroundColor="@color/colorYellowSecondary"

    app:cardCornerRadius="54dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/iv_content_description"
            tools:src="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:maxWidth="600dp"

            android:maxLines="1"
            android:maxLength="50"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"

            android:text="@string/user_name_preview"
         />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:maxWidth="600dp"

            android:maxLines="1"
            android:maxLength="50"

            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"

            android:text="@string/user_address_preview"
            />
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="16dp"
            android:maxWidth="600dp"

            android:maxLines="1"
            android:maxLength="50"

            app:layout_constraintTop_toBottomOf="@id/tv_address"
            app:layout_constraintStart_toEndOf="@id/iv_avatar"

            android:text="@string/user_phone_preview"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>