<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:layout_gravity="center"

    android:maxWidth="800dp"
    tools:context=".presentations.fragments.UserCardFragment">

    <ScrollView
        android:id="@+id/sv_user_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_user_avatar"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:contentDescription="@string/iv_content_description"
                android:scaleType="fitXY"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintWidth_max="500dp"
                tools:src="@tools:sample/avatars"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="-50dp"

                android:background="@drawable/fill_user_card_bg"
                android:maxWidth="500dp"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="400dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_user_avatar"
                app:layout_constraintWidth_max="800dp">


                <TextView
                    android:id="@+id/tv_fio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="32dp"

                    android:text="@string/def_user_name"

                    android:textAlignment="center"
                    android:textSize="24sp"

                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"

                    android:text="@string/tv_phone_title"
                    android:textAlignment="viewStart"

                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_fio" />

                <TextView
                    android:id="@id/tv_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="-4dp"

                    android:layout_marginEnd="24dp"
                    android:clickable="true"

                    android:lines="1"
                    android:minHeight="48dp"
                    android:text="@string/def_user_phone"

                    android:textAlignment="center"

                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_phone_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_phone_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/br_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_phone_title, tv_phone" />

                <TextView
                    android:id="@+id/tv_email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"

                    android:text="@string/tv_email_title"
                    android:textAlignment="viewStart"

                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/br_phone" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="-4dp"
                    android:layout_marginEnd="24dp"

                    android:clickable="true"
                    android:minHeight="48dp"

                    android:text="@string/def_user_email"

                    android:textAlignment="center"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_email_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_email_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/br_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_email_title, tv_email" />

                <TextView
                    android:id="@+id/tv_address_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"

                    android:text="@string/tv_address_title"
                    android:textAlignment="viewStart"

                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/br_email" />

                <TextView
                    android:id="@id/tv_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="-4dp"

                    android:layout_marginEnd="24dp"
                    android:clickable="true"

                    android:minHeight="48dp"
                    android:text="@string/def_user_address"

                    android:textAlignment="center"

                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_address_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_address_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/br_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_address_title, tv_address" />


                <TextView
                    android:id="@+id/tv_latitude_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"

                    android:text="@string/tv_latitude_title"
                    android:textAlignment="viewStart"

                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/br_address" />

                <TextView
                    android:id="@+id/tv_latitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="-4dp"
                    android:layout_marginEnd="24dp"

                    android:clickable="true"
                    android:minHeight="48dp"
                    android:text="@string/def_user_latitude"

                    android:textAlignment="center"

                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/tv_latitude_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_latitude_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/br_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_latitude_title, tv_latitude" />

                <TextView
                    android:id="@+id/tv_longitude_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"

                    android:text="@string/tv_longitude_title"
                    android:textAlignment="viewStart"

                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/br_latitude" />

                <TextView
                    android:id="@+id/tv_longitude"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="-4dp"
                    android:layout_marginEnd="24dp"

                    android:clickable="true"
                    android:minHeight="48dp"
                    android:text="@string/def_user_longitude"

                    android:textAlignment="center"

                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_longitude_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_longitude_title" />


                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/br_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_longitude_title, tv_longitude" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>